--- a/layout/default/aboutus.html
+++ b/layout/default/aboutus.html
@@ -1,10 +1,13 @@
 <block include="meta_head.html">
 <block include="header.html">
 <block inbed="content">
+	<cover>
+		<figure class="covertron"><print page="coverItem"></figure>
+	</cover>
 	<breadcrumb>
 		<section class="row">
-			<nav>
-				<ol class="breadcrumb">
+			<nav class="breadcrumb">
+				<ol>
 					<json-ld-breadcrumb>
 					<breaditems>
 						<li class="breadcrumb-item"><a href="<print breadcrumb=url>"><print breadcrumb="title"></a></li>
@@ -16,19 +19,14 @@
 			</nav>
 		</section>
 	</breadcrumb>
-	<section class="row jumboside">
-		<cover>
-			<picture class="jumbo jumbotron d-none d-lg-block hidewhenempty order-2"><print page="coverItem"></picture>
-		</cover>
-		<article class="jumbo m-0 p-0 px-3 order-1">
-			<print page="notes">
-		</article>
+	<section class="row">
+		<article class="hidewhenempty"><print page="notes"></article>
 	</section>
 	<section class="row">
 		<article class="media text-center">
 			<mediaitems>
 				<mediaimages>
-					<a class="m2" href="<print media=file>" data-fancybox="gallery" data-caption="<print media=fileALT>" data-srcset="<print lightbox=srcset>"><img <print thumb=srcset>src="<print media=thumb>" class="img-thumbnail" loading="lazy" alt="<print media=fileALT>"></a>
+					<a class="m-2" href="<print media=file>" data-fancybox="gallery" data-caption="<print media=fileALT>" data-srcset="<print lightbox=srcset>"><img <print thumb=srcset>src="<print media=thumb>" class="img-thumbnail" loading="lazy" alt="<print media=fileALT>"></a>
 				</mediaimages>
 			</mediaitems>
 		</article>
