--- a/layout/default/gallery.html
+++ b/layout/default/gallery.html
@@ -1,10 +1,13 @@
 <block include="meta_head.html">
 <block include="header.html">
 <block inbed="gallery">
+  <cover>
+		<figure class="covertron"><print page="coverItem"></figure>
+	</cover>
   <breadcrumb>
-		<section class="row mt-3 mb-0">
-			<nav class="col-12 col-sm-11">
-				<ol class="breadcrumb">
+		<section class="row">
+			<nav class="breadcrumb">
+				<ol>
 					<json-ld-breadcrumb>
 					<breaditems>
 						<li class="breadcrumb-item"><a href="<print breadcrumb=url>"><print breadcrumb="title"></a></li>
@@ -17,13 +20,11 @@
 		</section>
 	</breadcrumb>
   <pagenotes>
-    <section class="row mt-5">
-      <article class="col-12">
-        <print page="notes">
-      </article>
+    <section class="row">
+      <article class="hidewhenempty"><print page="notes"></article>
     </section>
   </pagenotes>
-  <section class="row col-12 mt-5">
+  <section class="row col-12">
     <article class="media my-2 text-center">
       <items>
          <a class="m2" href="<print media=file>" data-fancybox="gallery" data-caption="<print media=fileALT>" data-srcset="<print lightbox=srcset>"><img <print thumb=srcset>src="<print media=thumb>" class="img-thumbnail" loading="lazy" alt="<print media=fileALT>"></a>
