--- a/core/css/stylesheet-base.css
+++ b/core/css/stylesheet-base.css
@@ -86,6 +86,14 @@ footer {
   background-color: var(--footer-background-color);
   color: var(--footer-color); }
 
+footer a {
+  color: var(--footer-link-color);
+  text-decoration: var(--footer-link-decoration); }
+
+footer a:hover {
+  color: var(--footer-link-color-hover);
+  text-decoration: var(--footer-link-decoration-hover); }
+
 section {
   display: flex;
   flex-wrap: wrap;
@@ -140,31 +148,26 @@ nav ul li:hover ul {
 nav ul li ul {
   display: none;
   position: absolute;
-  top: 1.7rem;
+  top: 1.8rem;
   right: 0;
   z-index: 1040;
   box-shadow: var(--box-shadow-x) var(--box-shadow-y) var(--box-shadow-spread) var(--box-shadow-spread) var(--box-shadow-color);
   border: var(--border-width) var(--border-style) var(--menu-dropdown-border-color);
   border-radius: var(--border-radius);
   background-color: var(--menu-dropdown-background-color);
-  padding: .5rem 1rem;
-  width: auto;
-  height: auto;
-  white-space: wrap; }
+  padding: .1em 2.5em .1em .5em !important;
+  white-space: nowrap; }
 
 nav ul li ul li,
 nav ul li ul li a {
   display: block; }
 
 nav ul li ul li {
-  min-width: 300px;
-  max-width: 400px;
-}
+  width: auto !important; }
 
 nav ul li ul li img {
   width: 32px;
-  max-height: 32px;
-}
+  max-height: 32px; }
 
 /* Tables */
 caption {
@@ -233,7 +236,7 @@ command {}
 
 details {
   display: block;
-  margin: 1.3rem 0; }
+  margin: 1rem 0; }
 
 details summary {
   display: list-item;
