--- a/layout/default/search.html
+++ b/layout/default/search.html
@@ -3,8 +3,8 @@
 <block inbed="content">
 	<breadcrumb>
 		<section class="row mt-3 mb-0">
-			<nav class="col-12 col-sm-11">
-				<ol class="breadcrumb">
+			<nav class="breadcrumb">
+				<ol>
 					<json-ld-breadcrumb>
 					<breaditems>
 						<li class="breadcrumb-item"><a href="<print breadcrumb=url>"><print breadcrumb="title"></a></li>
